# ChangeLog for media-sound/gmpc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gmpc/ChangeLog,v 1.74 2011/02/26 12:17:50 xmw Exp $

  26 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-0.20.0.ebuild:
  sparc dropping keywords (bug 325621)

  25 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-0.20.0.ebuild:
  Added ~sparc (bug 325621)

  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gmpc-0.20.0.ebuild:
  x86 stable wrt bug #325621

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> gmpc-0.20.0.ebuild:
  ppc stable wrt #325621

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org> gmpc-0.20.0.ebuild:
  Stable on amd64 wrt bug #325621

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> gmpc-0.18.0-r2.ebuild,
  gmpc-0.19.0.ebuild, gmpc-0.19.1.ebuild, gmpc-0.20.0.ebuild:
  Drop sparc keywords

  22 Sep 2010; Jim Ramsay <lack@gentoo.org> gmpc-0.20.0.ebuild:
  Now that vala is slotted, we need :0 since gmpc assumes "valac" is present
  and does not look for "valac-10"

  30 Jun 2010; Christoph Mende <angelos@gentoo.org> gmpc-0.20.0.ebuild:
  Bumped vala dep to 0.7.10

*gmpc-0.20.0 (19 May 2010)

  19 May 2010; Christoph Mende <angelos@gentoo.org> +gmpc-0.20.0.ebuild:
  Verions bump (bug #312995)

*gmpc-0.19.1 (03 Nov 2009)

  03 Nov 2009; Christoph Mende <angelos@gentoo.org> +gmpc-0.19.1.ebuild:
  Version bump

*gmpc-0.19.0 (27 Sep 2009)

  27 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> +gmpc-0.19.0.ebuild:
  Version bump.

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  gmpc-0.18.0-r2.ebuild:
  stable x86, bug 272331

  06 Jun 2009; nixnut <nixnut@gentoo.org> gmpc-0.18.0-r2.ebuild:
  ppc stable #272331

  03 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  gmpc-0.18.0-r2.ebuild:
  stable amd64, bug 272331

  03 Jun 2009; Ferris McCormick <fmccor@gentoo.org> gmpc-0.18.0-r2.ebuild:
  Sparc stable, Bug #272331.

*gmpc-0.18.0-r2 (03 Jun 2009)
