@@ -1,12 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gmpc-0.18.0-libxspf.patch 7703 RMD160 60f5bea8020d2d4b27c9d4f85e70c4c3599a5dd4 SHA1 e8753ce40847fa27e7b9fccbdedf8d418e710a0d SHA256 39e2ee8d209b8b5fbe838d27092cd13d66f06c1109bbf1be63c9a19c55931efc
 AUX gmpc-0.18.0-password_dialog.patch 651 RMD160 51e7a990c22aba148db8c09dc321fbabe384cdf7 SHA1 3a6583461040a636da79088092802b0b3dc86982 SHA256 7e0fa323a7cc271c6eda244e85d6ee096ec916e40cbd23fb5c4ddaf79fe11f3c
-DIST gmpc-0.18.0.tar.gz 1376241 RMD160 64980140fbdb4de1d35c9af8ac604780ae81c8a4 SHA1 95b4ec3c094fd91007407dfa559d5aef50542d6a SHA256 7bb7bfebf6782f6bb3f9d586cb6a35a4340ef69f43b52ad0e06959b141a7db81
-DIST gmpc-0.19.0.tar.gz 1601887 RMD160 c82a2341cff709ca3e0be6b41fa031bbff5ce32d SHA1 a94e49ea909581826a97d13f9ce648e1b17a7160 SHA256 11d8013a494fae57b0efde19182f52029ff56d1b21cfa8b19e281fd135f4772d
-DIST gmpc-0.19.1.tar.gz 1876920 RMD160 500bd26081f5138344f639defd2e8d1f4954ab70 SHA1 cc71d3d14178725f921ab8956d7bd9f54b9bf513 SHA256 56776a5262072741f01c79ad6cb7c22a19c3358a89bf6d6a01a5724afcf2fbd5
 DIST gmpc-0.20.0.tar.gz 3093720 RMD160 fd1278dbec1eb7ca2efd1e0545b0e37ff1fad34f SHA1 3b160bb1e196760b0148faa6493c66083e1fe53d SHA256 d9b8bd23e86acc74049d2ceb5e06db8c62b43e7e5bd166ac8348eae133b9de81
-EBUILD gmpc-0.18.0-r2.ebuild 1356 RMD160 6daab925ebffdcc9044a7a013efadeb38dd3427e SHA1 72c359d674b917d4e5b3fd174bf92380223b134a SHA256 f0cbb3c080836bf6af49efc5c3355a1e3d2917b896cc18c87c20df6affc0ce1f
-EBUILD gmpc-0.19.0.ebuild 1220 RMD160 32c95d855d5f0b73e1e76716df227bad08c26380 SHA1 2166a9df246bd3b8907d3204a3c6095fda51c15f SHA256 9a9c625c0623d355240aee6ed610cd04a93f7ce907b4b75a6520a2e361ffc545
-EBUILD gmpc-0.19.1.ebuild 1220 RMD160 a33b2ac804b17f0955558428c84741ab9676275b SHA1 454f7fed299043f7e3d8aab6bfc51feda7966819 SHA256 db7d65ec0a816b789d1359cd976aa29527bae6f07f71096c04a9c742b954b7f8
 EBUILD gmpc-0.20.0.ebuild 1221 RMD160 e185b77407bd5151f0eee596de7714464e2712e4 SHA1 945e433e6c52c6c1a4e2a57064e636970bbdfdcf SHA256 78546431e1ada02d5c3b8240b79a7d01a614efa6efe668897a41f5d08228da84
-MISC ChangeLog 9356 RMD160 07e67fd054c1f9e37c8b1daca981d1d4da9854e7 SHA1 0824e56601f25d9ff79e83f20e974b9056c28aae SHA256 57dcd1b017b63a2ee222f6d98734c65dd62838c51dbbc2dec5cf58363aa533bb
+MISC ChangeLog 9495 RMD160 0c1b82fe0fdf9ab9cfedd95900d4c85ccbfd221e SHA1 ff3f1810621b31e8650580430046eceb155821fa SHA256 391926bddb5c6652d6efbeb919b5d083635d266132c41c6538539e86349c6e05
 MISC metadata.xml 342 RMD160 b79e0d8f63f387d420131a9d8196ac331f568b40 SHA1 4b8aebf988b206e50585b953bc457fc8133d3038 SHA256 fce3f240732cac6a55582a57289563d327e6b26922f9c6f33763498574303905
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk2EjMsACgkQmWq1bYTyC0PYZAEAu/PVsCKMvuHd/L+WwXMejLXC
+l/qziQr6x74URY9hGrcBAIqHUH944LXlSTgUNspOzwDl5mhv5515AyQ8FfBd1bIz
+=wVy2
+-----END PGP SIGNATURE-----
