@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/gmpc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gmpc/ChangeLog,v 1.74 2011/02/26 12:17:50 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gmpc/ChangeLog,v 1.75 2011/03/19 11:00:46 angelos Exp $
+
+  19 Mar 2011; Christoph Mende <angelos@gentoo.org> -gmpc-0.18.0-r2.ebuild,
+  -gmpc-0.19.0.ebuild, -gmpc-0.19.1.ebuild:
+  Removed old
 
   26 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-0.20.0.ebuild:
   sparc dropping keywords (bug 325621)
